# hystron-node

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  main.py  pyproject.toml  start.sh
.github/: changelog_configuration.json
.github/workflows/: release.yml
app/: config.py
app/grpc_server/: auth.py  server.py  servicer.py
app/xray/: config_validator.py  handler_client.py  process.py  stats_client.py
proto/: hystron_node.proto
proto/xray/app/proxyman/command/: command.proto
proto/xray/app/stats/command/: command.proto
proto/xray/common/protocol/: user.proto
proto/xray/common/serial/: typed_message.proto
proto/xray/core/: config.proto
proto/xray/proxy/trojan/: config.proto
proto/xray/proxy/vless/account/: config.proto
scripts/: gen_proto.py
